[package]
name = "saltedpb_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2", "macros", "multipart", "tracing"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
